# edms

./: .gitignore  README.md  edms.yml  pyproject.toml  setup.py
edms/: __init__.py  config.py  main.py  utils.py
edms/bio/: clone.py  fastq.py  genbank.py  ngs.py  pe.py  sanger.py  signature.py  transfect.py
edms/dat/: cosmic.py  cvar.py  ncbi.py
edms/resources/: UMI_15_hamming_4_yield_12525.csv  UMI_15_hamming_4_yield_18687_Esp3I_0.csv  UMI_15_hamming_4_yield_19242_Esp3I_0.csv  UMI_15_shuffle_hamming_5_100000.csv  edms_pcr.csv
example/PrimeDesignOutput/ngRNAs/: ngRNAs_pbs13.csv
example/PrimeDesignOutput/pegRNAs/: pegRNAs_pbs13.csv  pegRNAs_pbs14.csv  pegRNAs_pbs15.csv
example/RTT_designer/: pegRNAs_pbs15.csv
example/epegRNAs_priority/: pegRNAs_pbs13.csv  pegRNAs_pbs14.csv  pegRNAs_pbs15.csv
example/epegRNAs_priority/checkpoints/: pegRNAs_pbs13.csv  pegRNAs_pbs15.csv
example/epegRNAs_twist_order/: epegRNAs.csv
example/pegRNAs_priority/: pegRNAs_pbs15.csv
example/shared_sequences/: pegRNAs_pbs13.csv
example/shared_sequences_muts/: pegRNAs_pbs13.csv  pegRNAs_pbs14.csv  pegRNAs_pbs15.csv
example/src/: FOXA1_a3_wing2.csv
example/src/240921_11.20.18_PrimeDesign/: 20240921_11.20.20_PrimeDesign.csv
example/src/240921_11.20.25_PrimeDesign/: 20240921_11.20.27_PrimeDesign.csv
examples/analyze_fastq/in/: 240816_MUZ137_NGS.csv  IKZF1_ZF2_3.csv
examples/analyze_fastq/src/: ikfz1_zf2_3.ipynb
examples/design_library/COSMIC/: Gene_mutationsSat Sep 21 13_04_33 2024.csv
examples/design_library/RTT_designer/: pegRNAs_pbs13.csv  pegRNAs_pbs14.csv
examples/design_library/epegRNAs_priority/: pegRNAs_pbs14.csv  pegRNAs_pbs15.csv
examples/design_library/pegRNAs_priority/: pegRNAs_pbs13.csv  pegRNAs_pbs14.csv
examples/design_library/pegRNAs_tester/: pegRNAs_pbs14.csv
src/edms/: __init__.py  _version.py  config.py  main.py  utils.py
(+51 files in other folders)
