[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edms"
version = "0.0.1"
description = "Endogenous Deep Mutational Scans"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Marcanthony Zepeda", email = "mzepeda@g.harvard.edu" }
]
urls = { Homepage = "https://github.com/marczepeda/edms" }

dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "biopython",
  "requests",
  "scipy",
  "statsmodels",
  "scikit-learn",
  "Levenshtein",
  "ViennaRNA",
  "adjustText",
  "pillow",
  "dna-features-viewer",
  "openpyxl",
  "psutil",
  "argcomplete"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.scripts]
edms = "edms.main:main"

[tool.setuptools]
packages = ["edms"]

[tool.setuptools.package-data]
"edms.resources" = ["*.csv"]